Nov-29-1999 - Kurt Granroth (v0.4.4)
  o Added sample DCOP client for app
  o Fixed .desktop file
  o Made QPrinter a member var so settings are saved

Nov-26-1999 - Kurt Granroth (v0.4.3)
  o Beefed up the print function with more boilerplate stuff
  o KAccel keys should now work

Nov-20-1999 - Kurt Granroth (v0.4.2)
  o Use mkinstalldirs instead of mkdir

Nov-04-1999 - Kurt Granroth (v0.4.1)
  o Removed a few files from common/ that are in admin/ (missing,
    install-sh, mkinstalldirs)
  o Renamed .png files to "proper" naming convention
  o Got rid of admin/ directory from CVS.  It is now copied over from
    the common admin directory (found in kdesdk/admin).  This should
    prevent a lot of redundent updates

Nov-02-1999 - Kurt Granroth (v0.4)
  o Updated for KDE 2.x.  The produced application now has a LOT more
    functionality than before -- it is a scriptable web browser (see
    dcopclient.py for more info on that)!

Jan-24-1999 - Kurt Granroth (v0.3.2)
  o Added LIB_X11 and LIB_QT to acinclude.m4

Jan-18-1999 - Kurt Granroth (v0.3.1)
  o AUGH!! I forgot 'acinclude.m4'!!
  o Slightly modified 'install-me' so that kapptemplate will install from
    CVS.  It was wigging out when it tried to cp the CVS directory...
  
Jan-01-1999 - Kurt Granroth (v0.3)
  o Added kapptemplate to kdesdk
  o HUGE clean-up of code
  o Put in some session management stuff
  o Changed main() to use 'App *widget = new App;' instead of 'App widget'.
    The latter case caused the app to seg fault if the user closed it
    any way other than File->Quit

Dec-31-1998 - Kurt Granroth
  o Added 'knewfunction' module that will add a function to an existing
    class

Dec-27-1998 - Kurt Granroth
  o Split kapptemplate into modules.  Added 'knewclass' module that will
    create a new class

Dec-25-1998 - Kurt Granroth (v0.2.2)
  o Fixed bug in App class where AppWidget needed 'this' parent
  o Added 'pics' directory

Dec-18-1998 - Kurt Granroth