@@ -1,4 +1,4 @@
-KAppTemplate v0.4.4
+KAppTemplate v0.4.5
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
