@@ -2,8 +2,6 @@ echo "Creating $LOCATION_ROOT/${APP_NAME_LC}/${APP_NAME_LC}.desktop...";
 cat << EOF > $LOCATION_ROOT/${APP_NAME_LC}/${APP_NAME_LC}.desktop
 [Desktop Entry]
 Name=${APP_NAME}
-Name[da]=${APP_NAME}
-Name[de]=${APP_NAME}
 Exec=${APP_NAME_LC} %i %m -caption "%c"
 Icon=${APP_NAME_LC}
 Type=Application
