@@ -3,7 +3,7 @@ cat << EOF > $LOCATION_ROOT/${APP_NAME_LC}/${APP_NAME_LC}_client.cpp
 #include <kapp.h>
 #include <dcopclient.h>
 #include <qdatastream.h>
-#include <qcstring.h>
+#include <qstring.h>
 
 int main(int argc, char **argv)
 {
@@ -17,10 +17,10 @@ int main(int argc, char **argv)
     QByteArray data;
     QDataStream ds(data, IO_WriteOnly);
     if (argc > 1)
-        ds << QCString(argv[1]);
+        ds << QString(argv[1]);
     else
-        ds << QCString("http://www.kde.org");
-    client->send("${APP_NAME_LC}", "${APP_NAME}Iface", "openURL(QCString)", data);
+        ds << QString("http://www.kde.org");
+    client->send("${APP_NAME_LC}", "${APP_NAME}Iface", "openURL(QString)", data);
 
     return app.exec();
 }
