@@ -1,3 +1,6 @@
+Doc-05-1999 - Kurt Granroth (v0.4.5)
+  o Changed 'QCString' to QString in DCOP iface stuff...
+
 Nov-29-1999 - Kurt Granroth (v0.4.4)
   o Added sample DCOP client for app
   o Fixed .desktop file
